<?xml version="1.0"?>
<package>
  <name>ceres_bringup</name>
  <version>1.0.0</version>
  <description>The ceres_bringup package</description>

  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
  <maintainer email="gjulian@uos.de">Julian Gaal</maintainer>
  <maintainer email="chbroecker@uos.de">Christopher Broecker</maintainer>

  <license>BSD</license>
  <author email="gjulian@uos.de">Julian Gaal</author>
  <author email="chbroecker@uos.de">Chris Broecker</author>
  <author email="spuetz@uos.de">Sebastian Pütz</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>ceres_description</run_depend>
  <run_depend>volksbot_driver</run_depend>
  <run_depend>sick_tim</run_depend>
  <run_depend>pico_flexx_driver</run_depend>
  <run_depend>phidgets_drivers</run_depend>
</package>
