<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>ceres_bringup</name>
  <version>1.0.0</version>
  <description>The ceres_bringup package</description>

  <maintainer email="imitschke@uos.de">Isaak Ihorst</maintainer>
  <maintainer email="amock@uos.de">Alexander Mock</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>urdf</depend>
  <depend>xacro</depend>
  

  <exec_depend>volksbot_driver</exec_depend>
  <exec_depend>ceres_description</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>imu_filter_madgwick</exec_depend>
  <exec_depend>phidgets_drivers</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
