<?xml version="1.0"?>
<package>
  <name>ceres_description</name>
  <version>1.0.0</version>
  <description>The ceres_description package</description>

  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
  <maintainer email="gjulian@uos.de">Julian Gaal</maintainer>
  <maintainer email="chbroecker@uos.de">Christopher Broecker</maintainer>

  <license>BSD</license>

  <author email="gjulian@uos.de">Julian Gaal</author>
  <author email="chbroecker@uos.de">Christopher Broecker</author>
  <author email="spuetz@uos.de">Sebastian Pütz</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>uos_common_urdf</run_depend>
</package>
