<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ceres_gazebo</name>
  <version>2.0.0</version>
  <description>Launch files for starting up Ceres in the Gazebo simulator.</description>
  <maintainer email="imitschke@uos.de">Isaak Ihorst</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>urdf</depend>
  <depend>xacro</depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>ceres_description</exec_depend>
  <exec_depend>ceres_localization</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models" />
  </export>
</package>
