<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ceres_localization</name>
  <version>2.0.0</version>
  <description>The ceres_localization package</description>
  <maintainer email="imitschke@uos.de">Isaak Ihorst</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>robot_localization</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
