<?xml version="1.0"?>
<package format="2">
  <name>ceres_robot</name>
  <version>1.0.0</version>
  <description>The ceres_robot meta package</description>

  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
  <maintainer email="amock@uos.de">Alexander Mock</maintainer>

  <license>BSD-3</license>

  <url type="website">https://wiki.ros.org/ceres_robot</url>
  <author email="spuetz@uos.de">Sebastian Pütz</author>
  <author email="amock@uos.de">Alexander Mock</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- <exec_depend>ceres_bringup</exec_depend> -->
  <exec_depend>ceres_gazebo</exec_depend>
  <exec_depend>ceres_description</exec_depend>
  <exec_depend>ceres_localization</exec_depend>
  <exec_depend>ceres_navigation</exec_depend>
  <!-- <exec_depend>ceres_util</exec_depend> -->
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
