<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ceres_util</name>
  <version>2.0.0</version>
  <description>The ceres_util package</description>
  <author email="amock@uos.de">Alexander Mock</author>
  <maintainer email="amock@uos.de">Alexander Mock</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
