<?xml version="1.0"?>
<package format="2">
    <name>moveback_recovery</name>
    <version>1.0.0</version>
    <description>

        This package provides a simple recovery behavior for the navigation
        stack which moves back a specified length

    </description>
    <author email="fistutzenste@uos.de">Finn Stutzenstein</author>
    <maintainer email="fistutzenste@uos.de">Finn Stutzenstein</maintainer>

    <license>MIT</license>
    <url type="repository">https://gitlab.informatik.uni-osnabrueck.de/PraktikumSS2018/ceres_concurrency</url>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>tf</depend>
    <depend>costmap_2d</depend>
    <depend>pluginlib</depend>
    <exec_depend>mbf_costmap_core</exec_depend>

    <build_depend>cmake_modules</build_depend>
    <build_depend>mbf_costmap_core</build_depend>

    <export>
        <mbf_costmap_core plugin="${prefix}/moveback_recovery_plugin.xml" />
    </export>

</package>
